--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
     "fastclick": "^1.0.6",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "vant": "^2.6.3",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6",
